fix: add a min-height for top bar to avoid layout shift

--- a/js/apps/system/_admin/aardvark/APP/frontend/scss/_applicationDetailView.scss
+++ b/js/apps/system/_admin/aardvark/APP/frontend/scss/_applicationDetailView.scss
@@ -449,3 +449,8 @@ main {
   }
 
 }
+
+
+#subNavigationBar {
+  min-height: 60px;
+}
